--- a/meteorAlert/meteorAlert.html
+++ b/meteorAlert/meteorAlert.html
@@ -1,6 +1,5 @@
 <template name="meteorAlert">
-  <div class="meteorAlert">
+  <div class="meteorAlert meteorAlertHidden">
     {{alert.message}}
-    this is an alert
   </div>
 </template>
