fixed classes being removed early

--- a/meteorAlert/meteorAlert.html
+++ b/meteorAlert/meteorAlert.html
@@ -1,5 +1,5 @@
 <template name="meteorAlert">
-  <div class="meteorAlert meteorAlertHidden">
+  <div id="meteorAlert" class="meteorAlert meteorAlertHidden">
     {{alert.message}}
   </div>
 </template>
